STAGE-3/4-ingress/ingress-proj/resimsvc.yaml
# Service: resimler
apiVersion: v1
kind: Service
metadata:
  name: resimler
spec:
  selector:
    app: resimler
  ports:
    - protocol: TCP
      port: 80           
      targetPort: 80     
  type: ClusterIP
