STAGE-3/4-ingress/ingress-proj/videosvc.yaml
#  Service: videolar
apiVersion: v1
kind: Service
metadata:
  name: videolar
spec:
  selector:
    app: videolar
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 80     
  type: ClusterIP
